force-app/main/default/objects/Account/fields/Numero_PC__c.field-meta.xml
<CustomField>
    <fullName>Numero_PC__c</fullName>
    <label>Número PC</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>