force-app/main/default/objects/Account/fields/Numero_Servidores__c.field-meta.xml
<CustomField>
    <fullName>Numero_Servidores__c</fullName>
    <label>Número Servidores</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>