force-app/main/default/objects/Account/fields/NV_Tech_potencial_Cyber__c.field-meta.xml
<CustomField>
    <fullName>NV_Tech_potencial_Cyber__c</fullName>
    <inlineHelpText>M€</inlineHelpText>
    <label>Cyber</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>