force-app/main/default/objects/Account/fields/Ofertas_ganadas__c.field-meta.xml
<CustomField>
    <fullName>Ofertas_ganadas__c</fullName>
    <inlineHelpText>K€</inlineHelpText>
    <label>Ofertas ganadas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>