force-app/main/default/objects/Account/fields/Ofertas_perdidas__c.field-meta.xml
<CustomField>
    <fullName>Ofertas_perdidas__c</fullName>
    <inlineHelpText>K€</inlineHelpText>
    <label>Ofertas perdidas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>