force-app/main/default/objects/Account/fields/ON_activas__c.field-meta.xml
<CustomField>
    <fullName>ON_activas__c</fullName>
    <inlineHelpText>K€</inlineHelpText>
    <label>ON activas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>