force-app/main/default/objects/Account/fields/Oportunidad_fecha_cierre__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_fecha_cierre__c</fullName>
    <label>Oportunidad fecha cierre</label>
    <type>Date</type>
</CustomField>