force-app/main/default/objects/Account/fields/Organizacion__c.field-meta.xml
<CustomField>
    <fullName>Organizacion__c</fullName>
    <label>Organización</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>-</fullName>
                <isActive>false</isActive>
                <label>-</label>
            </value>
            <value>
                <fullName>BANKING</fullName>
            </value>
            <value>
                <fullName>Cambio de partner</fullName>
                <isActive>false</isActive>
                <label>Cambio de partner</label>
            </value>
            <value>
                <fullName>CLI</fullName>
                <isActive>false</isActive>
                <label>CLI</label>
            </value>
            <value>
                <fullName>Cli indirecto</fullName>
                <isActive>false</isActive>
                <label>Cli indirecto</label>
            </value>
            <value>
                <fullName>CON</fullName>
                <isActive>false</isActive>
                <label>CON</label>
            </value>
            <value>
                <fullName>CONSUMER</fullName>
            </value>
            <value>
                <fullName>DIGITAL ADMIN</fullName>
            </value>
            <value>
                <fullName>Distribuido</fullName>
                <isActive>false</isActive>
                <label>Distribuido</label>
            </value>
            <value>
                <fullName>ENERGY &amp; UTILITIES</fullName>
            </value>
            <value>
                <fullName>GRUPO IBERMATICA</fullName>
            </value>
            <value>
                <fullName>HEALTH</fullName>
            </value>
            <value>
                <fullName>ILA ARGENTINA</fullName>
            </value>
            <value>
                <fullName>INSURANCE</fullName>
            </value>
            <value>
                <fullName>INTERFLEX</fullName>
            </value>
            <value>
                <fullName>MANUFACTURING</fullName>
            </value>
            <value>
                <fullName>MICROSOFT</fullName>
            </value>
            <value>
                <fullName>N/R</fullName>
                <isActive>false</isActive>
                <label>N/R</label>
            </value>
            <value>
                <fullName>NC</fullName>
                <isActive>false</isActive>
                <label>NC</label>
            </value>
            <value>
                <fullName>ONCE GROUP</fullName>
            </value>
            <value>
                <fullName>SCADA ARGENTINA</fullName>
            </value>
            <value>
                <fullName>SCADA CHILE</fullName>
            </value>
            <value>
                <fullName>SCADA PERU</fullName>
            </value>
            <value>
                <fullName>SMART FACTORIES</fullName>
            </value>
            <value>
                <fullName>TMT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>