force-app/main/default/objects/Account/fields/Otros_contactos__c.field-meta.xml
<CustomField>
    <fullName>Otros_contactos__c</fullName>
    <label>Otros contactos relevantes de AYESA</label>
    <length>150</length>
    <type>Text</type>
</CustomField>