force-app/main/default/objects/Account/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>País</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Afganistán</fullName>
                <isActive>false</isActive>
                <label>Afganistán</label>
            </value>
            <value>
                <fullName>DE</fullName>
                <label>Alemania</label>
            </value>
            <value>
                <fullName>AD</fullName>
                <label>Andorra</label>
            </value>
            <value>
                <fullName>AO</fullName>
                <label>Angola</label>
            </value>
            <value>
                <fullName>SA</fullName>
                <label>Arabia Saudí</label>
            </value>
            <value>
                <fullName>DZ</fullName>
                <label>Argelia</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>Argentina</label>
            </value>
            <value>
                <fullName>AU</fullName>
                <label>Australia</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <label>Austria</label>
            </value>
            <value>
                <fullName>AZ</fullName>
                <label>Azerbaiyán</label>
            </value>
            <value>
                <fullName>BH</fullName>
                <label>Bahrein</label>
            </value>
            <value>
                <fullName>BD</fullName>
                <label>Bangladesh</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <label>Bélgica</label>
            </value>
            <value>
                <fullName>BY</fullName>
                <label>Bielorrusia</label>
            </value>
            <value>
                <fullName>BO</fullName>
                <label>Bolivia</label>
            </value>
            <value>
                <fullName>BR</fullName>
                <label>Brasil</label>
            </value>
            <value>
                <fullName>BG</fullName>
                <label>Bulgaria</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Canadá</label>
            </value>
            <value>
                <fullName>CL</fullName>
                <label>Chile</label>
            </value>
            <value>
                <fullName>CN</fullName>
                <label>China</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Colombia</label>
            </value>
            <value>
                <fullName>Corea</fullName>
            </value>
            <value>
                <fullName>Corea del Sur</fullName>
                <isActive>false</isActive>
                <label>Corea del Sur</label>
            </value>
            <value>
                <fullName>CI</fullName>
                <label>Costa de Marfil</label>
            </value>
            <value>
                <fullName>CR</fullName>
                <label>Costa Rica</label>
            </value>
            <value>
                <fullName>HR</fullName>
                <label>Croacia</label>
            </value>
            <value>
                <fullName>CU</fullName>
                <label>Cuba</label>
            </value>
            <value>
                <fullName>DK</fullName>
                <label>Dinamarca</label>
            </value>
            <value>
                <fullName>Dominica</fullName>
                <isActive>false</isActive>
                <label>Dominica</label>
            </value>
            <value>
                <fullName>E.A.U.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>