force-app/main/default/objects/Account/fields/Perfil_MKT__c.field-meta.xml
<CustomField>
    <fullName>Perfil_MKT__c</fullName>
    <label>Perfil MKT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Large Account</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>