force-app/main/default/objects/Account/fields/Persona_Clave_2__c.field-meta.xml
<CustomField>
    <fullName>Persona_Clave_2__c</fullName>
    <label>Persona Clave 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>