force-app/main/default/objects/Account/fields/Plan_de_cuentas__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_cuentas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plan de cuentas</label>
    <type>Checkbox</type>
</CustomField>