force-app/main/default/objects/Account/fields/Plan_marketing_previsto_3__c.field-meta.xml
<CustomField>
    <fullName>Plan_marketing_previsto_3__c</fullName>
    <label>Acción 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>