force-app/main/default/objects/Account/fields/Plan_marketing_realizado_1__c.field-meta.xml
<CustomField>
    <fullName>Plan_marketing_realizado_1__c</fullName>
    <label>Acción 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>