force-app/main/default/objects/Account/fields/Planteamiento_internacional__c.field-meta.xml
<CustomField>
    <fullName>Planteamiento_internacional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planteamiento internacional</label>
    <type>Checkbox</type>
</CustomField>