force-app/main/default/objects/Account/fields/Presupuesto_IT__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto_IT__c</fullName>
    <label>Presupuesto IT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;1M</fullName>
            </value>
            <value>
                <fullName>1M€-5M€</fullName>
            </value>
            <value>
                <fullName>&gt;5M€</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>