force-app/main/default/objects/Account/fields/Principal_Competidor_3__c.field-meta.xml
<CustomField>
    <fullName>Principal_Competidor_3__c</fullName>
    <label>Principal Competidor 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>