force-app/main/default/objects/Account/fields/Principales_acciones_1__c.field-meta.xml
<CustomField>
    <fullName>Principales_acciones_1__c</fullName>
    <label>Acción 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>