force-app/main/default/objects/Account/fields/Principales_acciones_3__c.field-meta.xml
<CustomField>
    <fullName>Principales_acciones_3__c</fullName>
    <label>Acción 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>