force-app/main/default/objects/Account/fields/Razon_bloqueo__c.field-meta.xml
<CustomField>
    <fullName>Razon_bloqueo__c</fullName>
    <label>Razón bloqueo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>