force-app/main/default/objects/Account/fields/Razon_Social__c.field-meta.xml
<CustomField>
    <fullName>Razon_Social__c</fullName>
    <description>Es la Razón Social de la cuenta, sino se informa se hereda del nombre de la cuenta.</description>
    <label>Razón Social</label>
    <length>100</length>
    <type>Text</type>
</CustomField>