force-app/main/default/objects/Account/fields/Referenciable_ING__c.field-meta.xml
<CustomField>
    <fullName>Referenciable_ING__c</fullName>
    <label>Referenciable ING</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Sí</label>
            </value>
            <value>
                <fullName>175540000</fullName>
                <label>Visita Referencia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>