force-app/main/default/objects/Account/fields/Referenciable_MES__c.field-meta.xml
<CustomField>
    <fullName>Referenciable_MES__c</fullName>
    <label>Referenciable MES</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Si</label>
            </value>
            <value>
                <fullName>175540000</fullName>
                <label>Visita Referencia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>