force-app/main/default/objects/Account/fields/Relacion_Institucional__c.field-meta.xml
<CustomField>
    <fullName>Relacion_Institucional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relación Institucional</label>
    <type>Checkbox</type>
</CustomField>