force-app/main/default/objects/Account/fields/Riesgos__c.field-meta.xml
<CustomField>
    <fullName>Riesgos__c</fullName>
    <label>Riesgos</label>
    <type>TextArea</type>
</CustomField>