force-app/main/default/objects/Account/fields/SAP_Account_IB__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account_IB__c</fullName>
    <externalId>true</externalId>
    <label>SAP Account IB #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>