force-app/main/default/objects/Account/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <inlineHelpText>Área diferenciada de la actividad económica y productiva en la que se engloba la empresa.</inlineHelpText>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Admón. Pública</fullName>
            </value>
            <value>
                <fullName>Educación</fullName>
            </value>
            <value>
                <fullName>Engineering and Architecture</fullName>
                <isActive>false</isActive>
                <label>Engineering and Architecture</label>
            </value>
            <value>
                <fullName>Financiero</fullName>
                <isActive>false</isActive>
                <label>Financiero</label>
            </value>
            <value>
                <fullName>Finanzas</fullName>
            </value>
            <value>
                <fullName>Industria</fullName>
            </value>
            <value>
                <fullName>Ingeniería Industrial</fullName>
            </value>
            <value>
                <fullName>Ingeniería y Arquitectura</fullName>
            </value>
            <value>
                <fullName>Sanidad</fullName>
            </value>
            <value>
                <fullName>Sector al que pertenece</fullName>
                <isActive>false</isActive>
                <label>Sector al que pertenece</label>
            </value>
            <value>
                <fullName>Sector Público</fullName>
                <isActive>false</isActive>
                <label>Sector Público</label>
            </value>
            <value>
                <fullName>Seguros</fullName>
            </value>
            <value>
                <fullName>Servicios</fullName>
            </value>
            <value>
                <fullName>Tecnologías de la información</fullName>
                <isActive>false</isActive>
                <label>Tecnologías de la información</label>
            </value>
            <value>
                <fullName>Telco y Media</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>