force-app/main/default/objects/Account/fields/Sector_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Sector_Cuenta__c</fullName>
    <label>Sector Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administración</fullName>
            </value>
            <value>
                <fullName>Aeronáutica</fullName>
            </value>
            <value>
                <fullName>Alimentación</fullName>
            </value>
            <value>
                <fullName>Arquitectura y construcción</fullName>
            </value>
            <value>
                <fullName>Automatización</fullName>
            </value>
            <value>
                <fullName>Automoción</fullName>
            </value>
            <value>
                <fullName>Bienes de consumo</fullName>
            </value>
            <value>
                <fullName>Bienes de equipo</fullName>
            </value>
            <value>
                <fullName>Calderería, chapa y estructura metálica</fullName>
            </value>
            <value>
                <fullName>Centros de investigación</fullName>
            </value>
            <value>
                <fullName>Educacional</fullName>
            </value>
            <value>
                <fullName>Elec: instalaciones eléctricas</fullName>
            </value>
            <value>
                <fullName>Elec: material y equipo eléctrico</fullName>
            </value>
            <value>
                <fullName>Energía, procesos y útiles</fullName>
            </value>
            <value>
                <fullName>Envases</fullName>
            </value>
            <value>
                <fullName>Equipos electrónicos</fullName>
            </value>
            <value>
                <fullName>Equipos para industria de procesos</fullName>
            </value>
            <value>
                <fullName>Hi-Tech</fullName>
            </value>
            <value>
                <fullName>Maquinaria agrícola y de obras públicas</fullName>
            </value>
            <value>
                <fullName>Maquinaria de envase y embalaje</fullName>
            </value>
            <value>
                <fullName>Maquinaria especial</fullName>
            </value>
            <value>
                <fullName>Maquinaria fabricación</fullName>
            </value>
            <value>
                <fullName>Mecanizado subcontratación</fullName>
            </value>
            <value>
                <fullName>Moldes y piezas de plástico</fullName>
            </value>
            <value>
                <fullName>Moldes, matrices, troqueles</fullName>
            </value>
            <value>
                <fullName>Naval</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Servicios de ingeniería</fullName>
            </value>
            <value>
                <fullName>Transporte</fullName>
            </value>
            <value>
                <fullName>Alquiler</fullName>
                <isActive>false</isActive>
                <label>Alquiler</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>