force-app/main/default/objects/Account/fields/Sector_text__c.field-meta.xml
<CustomField>
    <fullName>Sector_text__c</fullName>
    <label>Sector IB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>