force-app/main/default/objects/Account/fields/SIC__c.field-meta.xml
<CustomField>
    <fullName>SIC__c</fullName>
    <label>SIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>