force-app/main/default/objects/Account/fields/Subsector__c.field-meta.xml
<CustomField>
    <fullName>Subsector__c</fullName>
    <inlineHelpText>Distinct activity within the sector the company is a part of.</inlineHelpText>
    <label>Subsector</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sector__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administración Autonómica</fullName>
            </value>
            <value>
                <fullName>Administración Central</fullName>
            </value>
            <value>
                <fullName>Administración Latam</fullName>
            </value>
            <value>
                <fullName>Administración Local</fullName>
            </value>
            <value>
                <fullName>Aeroespacial</fullName>
            </value>
            <value>
                <fullName>Agroalimentaria</fullName>
            </value>
            <value>
                <fullName>Agua</fullName>
            </value>
            <value>
                <fullName>Alimentación bebidas y tabaco</fullName>
            </value>
            <value>
                <fullName>Automoción</fullName>
            </value>
            <value>
                <fullName>Bancos</fullName>
            </value>
            <value>
                <fullName>Cajas de Ahorros</fullName>
            </value>
            <value>
                <fullName>Calzado</fullName>
            </value>
            <value>
                <fullName>Carbón</fullName>
            </value>
            <value>
                <fullName>Centros de formación en gral.</fullName>
            </value>
            <value>
                <fullName>Centros de Investigación</fullName>
            </value>
            <value>
                <fullName>Comercio Minorista</fullName>
            </value>
            <value>
                <fullName>Compañías de Banca/Seguros</fullName>
            </value>
            <value>
                <fullName>Construcción</fullName>
            </value>
            <value>
                <fullName>Construcción/Promoción</fullName>
            </value>
            <value>
                <fullName>Construcciones Mecánicas</fullName>
            </value>
            <value>
                <fullName>Construcción Maquinaria</fullName>
            </value>
            <value>
                <fullName>Consultoría</fullName>
            </value>
            <value>
                <fullName>Contact Center</fullName>
            </value>
            <value>
                <fullName>Corredurías/Mediadoras</fullName>
            </value>
            <value>
                <fullName>Distribución</fullName>
            </value>
            <value>
                <fullName>Distribución y Logística</fullName>
            </value>
            <value>
                <fullName>Educación privada</fullName>
            </value>
            <value>
                <fullName>Electricidad</fullName>
            </value>
            <value>
                <fullName>Emp. TT.II. Relac.con Finanzas</fullName>
            </value>
            <value>
                <fullName>Emp. TT.II De la Admon.Autonó.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>