force-app/main/default/objects/Account/fields/Subsector_texto__c.field-meta.xml
<CustomField>
    <fullName>Subsector_texto__c</fullName>
    <label>Subsector IB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>